<resources>
    <string name="app_name">EloaAndroid</string>
    <string name="facebook_app_id">204984990233862</string>
    <string name="title_activity_main2">UserProfile</string>

    <string name="facebook_login">Login With Facebook</string>
    <string name="facebook_signUp">SignUp with Facebook</string>
    <string name="facebook_logout">Logout</string>

    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>

    <string name="emailAddress">Email Address</string>
    <string name="password">Password</string>
    <string name="or">OR</string>
    <string name="loginTwitter">Login with Twitter</string>
    <string name="loginFB">Login with Facebook</string>
    <string name="tryForFree">Try for Free</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="instruction">Lorem Ipsu is simply dummy text of the priniting and typrsetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a gallery of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially inchanged.</string>

    <!--SignUp Detait-->
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="law_firm_name">Law Firm Name</string>
    <string name="area_of_low_id">Area of Low Id</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup_withtwitter">SignUp with Twitter</string>
    <string name="signUp_withfacebook">SignUp with Facebook</string>

    <!--Video Detail-->
    <string name="videoInfoPreview">VIDEO INFORMATION PREVIEW</string>
    <string name="keywords">Keywords: </string>
    <string name="videoTitle">Video Title: </string>
    <string name="description">Description: </string>
    <string name="location">Location: </string>
    <string name="editVideoInfo">EDIT VIDEO INFORMATION</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
